# src/main/resources/openapi.yaml
@@ -403,6 +403,22 @@ paths:
               - COMPLETED
               - NOT_COMPLETED
           description: 조회할 입금 상태
+        - name: year
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int32
+          description: 조회할 연도(예:2024)
+        - name: month
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 1
+            maximum: 12
+          description: 조회할 월 (1에서 12 사이)
       responses:
         '200':
           description: successful operation
